Primeiro contato CSS

--- a/css/index.html
+++ b/css/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div id="container">
-        <header>
+        <header id="header">
             <h1>Nome do Site</h1>
             <div>
                 <a href="#">Sair</a>
@@ -45,6 +45,12 @@
                 <h3>Enredo</h3>
 
                 <p class="red">
+                    As várias versões seguem praticamente o mesmo enredo básico. Contudo, uma vez que Adams reescreveu a
+                    história substancialmente para cada nova adaptação, os personagens muitas vezes estão em lugares
+                    mutuamente contraditórios.
+                </p>
+
+                <p>
                     As várias versões seguem praticamente o mesmo enredo básico. Contudo, uma vez que Adams reescreveu a
                     história substancialmente para cada nova adaptação, os personagens muitas vezes estão em lugares
                     mutuamente contraditórios.
