--- a/html/exercicios/02.html
+++ b/html/exercicios/02.html
@@ -8,15 +8,29 @@
 <body>
     
     <p>
-        <strong>Douglas Noël Adams</strong> <em>(Cambridge, 11 de março de 1952 — Santa Bárbara, 11 de maio de 2001)</em> foi um escritor e comediante britânico, famoso por ter escrito esquetes para a série televisiva Monty Python's Flying Circus, junto com os integrantes desse grupo de humor nonsense, e pela série de rádio, jogos e livros The Hitchhiker's Guide to the Galaxy.
+        <strong>Douglas Noël Adams</strong> <em>(Cambridge, 11 de março de 1952 — Santa Bárbara, 11 de maio de 2001)</em>
+         foi um escritor e comediante britânico, famoso por ter escrito esquetes para a série televisiva 
+         Monty Python's Flying Circus, junto com os integrantes desse grupo de humor nonsense, 
+         e pela série de rádio, jogos e livros The Hitchhiker's Guide to the Galaxy.
     </p>
     <p>
-        Os fãs e amigos de Adams o descreveram também como um ativista ambiental, um assumido ateísta radical e amante dos automóveis possantes, câmeras, computadores Macintosh e outros 'apetrechos tecnológicos'. O biólogo Richard Dawkins dedicou-lhe seu livro The God Delusion e nele descreve como Adams compreendeu a teoria da evolução e, tornou-se um ateísta. Adams era um entusiasta de novas tecnologias, tendo escrito sobre email e usenet antes de tornarem-se amplamente conhecidos. Até o fim de sua vida, Adams foi um requisitado professor de tópicos que incluíam ambiente e tecnologia.
+        Os fãs e amigos de Adams o descreveram também como um ativista ambiental, um assumido ateísta radical e amante
+        dos automóveis possantes, câmeras, computadores Macintosh e outros 'apetrechos tecnológicos'. 
+        O biólogo Richard Dawkins dedicou-lhe seu livro The God Delusion e nele descreve como Adams compreendeu 
+        a teoria da evolução e, tornou-se um ateísta. Adams era um entusiasta de novas tecnologias, 
+        tendo escrito sobre email e usenet antes de tornarem-se amplamente conhecidos. 
+        Até o fim de sua vida, Adams foi um requisitado professor de tópicos que incluíam ambiente e tecnologia.
     </p>
+
     <h3>Carreira</h3>
     <p>
-        Adams iniciou sua carreira como escritor, logo após se formar em literatura inglesa pela St John's College parte da Universidade de Cambridge,[4] em 74, passou parte da década de 70 viajando como mochileiro pela Europa até a cidade de Istambul, na Turquia. O sucesso vem quando, em 77, Adams conhece Simon Brett, que trabalhava na rádio BBC 4. Juntos os dois decidem produzir um programa humorístico sobre ficção científica para a rádio. Era o início de <em>O Guia do Mochileiro das Galáxias</em>.
+        Adams iniciou sua carreira como escritor, logo após se formar em literatura inglesa pela St John's College 
+        parte da Universidade de Cambridge,[4] em 74, passou parte da década de 70 viajando como mochileiro pela 
+        Europa até a cidade de Istambul, na Turquia. O sucesso vem quando, em 77, Adams conhece Simon Brett, que 
+        trabalhava na rádio BBC 4. Juntos os dois decidem produzir um programa humorístico sobre ficção científica 
+        para a rádio. Era o início de <em>O Guia do Mochileiro das Galáxias</em>.
     </p>
+    
     <h3>Filme</h3>
     <p>
         Ver artigo principal: <em>The Hitchhiker's Guide to the Galaxy (filme)</em>
