--- a/css/index.html
+++ b/css/index.html
@@ -18,7 +18,7 @@
             </div>
         </header>
 
-        <section id="content">
+        <section id="content" style="clear: both;">
 
             <section id="sidebar">
                 <ul>
