--- a/css/login.html
+++ b/css/login.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container">
-        <form action="painel.html" method="post">
+        <form class="form" action="painel.html" method="post">
             <div class="img">
                 <img src="./logo.png" alt="Sistema AI">
                 <h4>Sistema AI</h4>
@@ -22,7 +22,7 @@
     
                 <div>
                     <label for="password">Senha</label>
-                    <input type="password" name="password" id="user" placeholder="Digite sua senha" required>
+                    <input type="password" name="password" id="password" placeholder="Digite sua senha" required>
                 </div>
             </fieldset>
             
