--- a/css/painel.html
+++ b/css/painel.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemmplos CSS</title>
-    <link rel="stylesheet" href="painel.css">
+    <link rel="stylesheet" href="painel_pronto.css">
 </head>
 
 <body>
