jogo da velha com bootstrap

--- a/javascript/jogo-velha/jogo-da-velha-bootstrap.html
+++ b/javascript/jogo-velha/jogo-da-velha-bootstrap.html
@@ -33,19 +33,19 @@
             <div class="col-8">
                 <table id="table-data" class="table table-bordered d-none">
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td class="bg-opacity-25"></td>
+                        <td class="bg-opacity-25"></td>
+                        <td class="bg-opacity-25"></td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td class="bg-opacity-25"></td>
+                        <td class="bg-opacity-25"></td>
+                        <td class="bg-opacity-25"></td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td class="bg-opacity-25"></td>
+                        <td class="bg-opacity-25"></td>
+                        <td class="bg-opacity-25"></td>
                     </tr>
                 </table>    
             </div>
