--- a/projetos-praticos/lista-afazeres/index.html
+++ b/projetos-praticos/lista-afazeres/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-BR" data-bs-theme="dark">
+<html lang="pt-BR" data-bs-theme="light">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Afazeres</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/bootstrap-icons/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
@@ -23,7 +23,7 @@
                 <div class="row">
                     <div class="col text-start">
 
-                        <ul class="list-group">
+                        <ul class="list-group" id="listaDeItens">
                             <li class="list-group-item hstack gap-2">
                                 <input class="form-check-input" type="checkbox" value="" id="firstCheckbox">
                                 <label class="form-check-label" for="firstCheckbox">
@@ -43,7 +43,7 @@
                     </div>
                     <div class="col text-start">
 
-                        <form action="?p-salvar" method="post">
+                        <form action="?p-salvar" method="post" id="formAddItem">
 
                             <div class="mb-3">
                                 <label for="iTituloTarefa" class="form-label">Tarefa</label>
@@ -72,6 +72,8 @@
                                 <button type="submit" class="btn btn-block btn-success">
                                     Salvar
                                 </button>
+
+                                <button type="button" class="btn btn-dark a b c d cavalo" id="btnMudaTema" onclick="mudarTema()">Muda Tema</button>
                             </div>
 
                         </form>
@@ -88,7 +90,7 @@
 
     </div>
 
-
+    <script src="assets/js/scripts.js"></script>
 </body>
 
 </html>
