--- a/html/frames/sobre.html
+++ b/html/frames/sobre.html
@@ -39,6 +39,18 @@
 
                 </div>
             </div>
+            <div class="row featurette">
+                <div class="col-md-5">
+                    <iframe width="500" height="500" src="https://www.youtube.com/embed/RV0LBPnfDLU?si=AlPvoV8lgk1eb0CN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <div class="col-md-7">
+                    <h2 class="featurette-heading">Ainda sobre os iframes...</h2>
+                    <p class="lead">
+                        Você pode colocar um frame dentro de outro frame, como nesse exemplo, onde essa página é um frame e o vídeo ao lado é outro.
+                    </p>
+
+                </div>
+            </div>
         </div>
     </main>
 
