--- a/html/frames/sobre.html
+++ b/html/frames/sobre.html
@@ -27,6 +27,21 @@
                         o conteúdo.
                     </p>
 
+                    <p class="lead">
+                        <b>Exemplo:</b>
+                        <br>
+                    </p>
+                    <pre>
+                        <code>
+&lt;iframe 
+    src="home.html" 
+    name="mostrarPaginas" 
+    width="100%" 
+    height="100%" 
+    frameborder="0"&gt;
+&lt;/iframe&gt;
+                        </code>
+                    </pre>
                 </div>
                 <div class="col-md-5">
                     <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
@@ -47,6 +62,24 @@
                     <h2 class="featurette-heading">Ainda sobre os iframes...</h2>
                     <p class="lead">
                         Você pode colocar um frame dentro de outro frame, como nesse exemplo, onde essa página é um frame e o vídeo ao lado é outro.
+                    </p>
+
+                    <p class="lead">
+                        <b>Exemplo:</b>
+                        <br>
+                        <pre>
+                            <code>
+&lt;iframe 
+    width="500" 
+    height="500" 
+    src="https://www.youtube.com/embed/RV0LBPnfDLU?si=AlPvoV8lgk1eb0CN"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen&gt;
+&lt;/iframe&gt;
+                            </code>
+                        </pre>
                     </p>
 
                 </div>
