Ajuste mais informacoes card iframe

--- a/html/frames/sobre.html
+++ b/html/frames/sobre.html
@@ -33,6 +33,7 @@
                     </p>
                     <pre>
                         <code>
+&lt;a href="pagina.html" targe="mostrarPaginas"&gt;Abrir Página&lt;/a&gt;
 &lt;iframe 
     src="home.html" 
     name="mostrarPaginas" 
