adicionado texto de lisa vazia, adicionada funçào para remover da lista

--- a/html/frames/home.html
+++ b/html/frames/home.html
@@ -9,11 +9,26 @@
     <link href="https://getbootstrap.com/docs/5.1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="https://getbootstrap.com/docs/5.1/examples/product/product.css" rel="stylesheet" crossorigin="anonymous">
 
+    <style>
+        .imagemFundo {
+            width: 100%;
+            height: 500px;
+            background-image: url(tardis__type_40_mark_i.jpg);
+            background-repeat: no-repeat;
+            background-size: 300px;
+            background-position-x: right;
+            background-position-y: bottom;
+        }
+    </style>
 </head>
 
 <body>
 
     <main>
+
+        <div class="imagemFundo">
+
+        </div>
         
         <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
             <div class="col-md-5 p-lg-5 mx-auto my-5">
