--- a/html/frames/index.html
+++ b/html/frames/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <div id="content">
-        <iframe src="home.html" name="mostrarPaginas" width="100%" height="100%" frameborder="0"></iframe>
+        <iframe src="http://google.com" name="mostrarPaginas" width="100%" height="100%" frameborder="0" target="_blank" ></iframe>
     </div>
 
 </body>
