aula 03 - lista de afazeres

--- a/projetos-praticos/lista-afazeres/index.html
+++ b/projetos-praticos/lista-afazeres/index.html
@@ -23,21 +23,11 @@
                 <div class="row">
                     <div class="col text-start">
 
+                        <p class="text-center text-warning p-4" id="sumir"> 
+                            Adicione o primeiro item da lista
+                        </p>
+
                         <ul class="list-group" id="listaDeItens">
-                            <li class="list-group-item hstack gap-2">
-                                <input class="form-check-input" type="checkbox" value="" id="firstCheckbox">
-                                <label class="form-check-label" for="firstCheckbox">
-                                    Fazer slides
-                                </label>
-                                <span class="ms-auto text-end">
-                                    <span class="badge bg-primary rounded-pill" role="button">
-                                        <i class="bi bi-pencil"></i>
-                                    </span>
-                                    <span class="badge bg-danger rounded-pill" role="button">
-                                        <i class="bi bi-trash"></i>
-                                    </span>
-                                </span>
-                            </li>
                         </ul>
 
                     </div>
@@ -48,7 +38,7 @@
                             <div class="mb-3">
                                 <label for="iTituloTarefa" class="form-label">Tarefa</label>
                                 <input type="text" class="form-control" name="iTituloTarefa" id="iTituloTarefa"
-                                    placeholder="Digite a tarefa">
+                                    placeholder="Digite a tarefa" value="">
                             </div>
 
                             <div class="mb-3">
